# roxabi-plugins

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README.upgraded.md  SECURITY.md  biome.json  lefthook.yml  package-lock.json  package.json  release-please-config.json  sync-plugins.sh  tsconfig.json  vitest.config.ts  vitest.setup.ts
.grok/: lsp.json
plugins/idna/runtime/: Makefile  idna_server.py  pyproject.toml
plugins/idna/runtime/idna/: __init__.py  api.py  api_new.py  config.py  daemon.py  generation.py  hires.py  html_index.py  html_index_css.py  html_index_js.py  html_picker.py  html_picker_css.py  html_picker_js.py  html_picker_js_actions.py  html_picker_js_render.py  nodes.py  pbo.py  server.py  session.py
plugins/web-intel/: README.md  pyproject.toml
plugins/web-intel/.claude-plugin/: plugin.json
plugins/web-intel/adapters/: __init__.py  fetcher_registry.py
plugins/web-intel/domain/: exceptions.py  models.py
plugins/web-intel/ports/: fetcher.py
plugins/web-intel/scripts/: __init__.py  analysis_derivatives.py  doctor.py  enricher.py  gpu_detector.py  scraper.py  screenshot.py  video_analyzer.py  video_vlm.py
plugins/web-intel/scripts/_shared/: __init__.py  content_cache.py  fetch_base.py  resolve_redirects.py  retry.py  sanitizers.py  timeouts.py  validators.py  validators_ssrf.py  validators_subprocess.py  validators_url.py
plugins/web-intel/scripts/fetchers/: __init__.py  base.py  generic.py  gist.py  github.py  reddit.py  stealth.py  twitter.py  youtube.py
plugins/web-intel/scripts/utils/: __init__.py  url_detector.py
plugins/web-intel/skills/adapt/: SKILL.md
plugins/web-intel/skills/analyze-url/: SKILL.md
plugins/web-intel/skills/benchmark/: SKILL.md
plugins/web-intel/skills/explain/: SKILL.md
plugins/web-intel/skills/roast/: SKILL.md
plugins/web-intel/skills/scrape/: SKILL.md
plugins/web-intel/skills/summarize/: SKILL.md
plugins/web-intel/tests/: test_adapters.py  test_domain.py  test_generic_fallback.py  test_screenshot.py  test_stealth.py
(+1054 files in other folders)
