[project]
name = "idna-server"
version = "0.1.0"
description = "IDNA — Image DNA picker server"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["idna"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["idna", "idna_server.py"]
# ── Permanent policy ──────────────────────────────────────────────────────────
#
# reportPrivateUsage: Python's _name is a convention (advisory), not access
# control. Pyright enforcing it generates false positives on tightly-coupled
# partner modules, stdlib internals, and white-box test access — none of which
# represent real violations. Enforced by code review, not by the type checker.
reportPrivateUsage = "none"
#
# reportUnusedFunction: Decorator-registered callables are not statically
# reachable. All private module helpers are called through module entry points.
reportUnusedFunction = "none"
# ── Suppressed: cascading errors from dynamic template loading and LLM calls ──
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"

[dependency-groups]
dev = [
    "pyright>=1.1",
]
